carbonsite/emission_calculator/static/emission_calculator/styles.css
/* Styling the base of the pages */

:root{
	--greenbackground:#228B22;
	--mainbackground:#eaeaea;
}

body{
    margin:0;
    background:var(--mainbackground);
    font-family: 'Work Sans', sans-serif;
    font-weight:400;
}

main {
	text-align: center;
	position: relative;
	top: 100px;
}

main h1 {
	float: left;
}

/* Stops the paragraphs from looking awful */
p {
	font-family: 'Work sans', sans-serif;
	font-weight: bold;
	text-align: center;
}

section a {
	text-decoration: none;
}

ul {
	list-style: none;
}

header{
	text-align:center;
	position:fixed;
  z-index: 999;
	width:100%;
	background-image: linear-gradient(to bottom, rgba(21, 2, 107, 1), rgba(21, 2, 107, 0));
	height: 8ex;
}

/* Styling the nav */

nav{
	position: absolute;
	text-align:left;
	top:100%;
	left:0;
	width: 100%;
	transform: scale(1, 0);
	transform-origin:top;
	transition: transform 300ms ease-in-out;
}

.nav-toggle{
	display:none;
}

.nav-toggle-label{
	position:absolute;
	top:0;
	left:0;
	margin-left:1em;
	height:100%;
	display:flex;
	align-items:center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after{
	display: block;
	background:white;
	height:3px;
	width:2em;
	border-radius: 10px;
	position:relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after{
	content: '';
	position:absolute;
}

.nav-toggle-label span::before{
	bottom: 8px;
}

.nav-toggle-label span::after{
	top:8px;
}

nav ul{
	margin:0;
	padding:0;
	list-style: none;
}

nav li{
	margin-bottom:1em;
	margin-left:1em
}

nav a{
	color: white;
	text-decoration: none;
	font-size:1.2rem;
	text-transform: uppercase;
	opacity:0;
	transition: opacity 150ms ease-in-out;
	background-color: #675B9C;
	padding: 2px 20px;
	border-radius: 50%;
}

nav a:hover{
	color:#c4c4c4;
}

.nav-toggle:checked ~ nav{
	transform: scale(1,1);
}

.nav-toggle:checked ~ nav a{
	opacity:1;
	transition: opacity 250ms ease-in-out 250ms;
}

/* Media query to change styling depending on view window */

@media screen and (min-width:1150px) {
	.nav-toggle-label{
		display:none;
	}
	header{
		display:grid;
		grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
	}
	
	.logo{
		grid-column: 2 / span 1;
	}
	
	nav{
		all: unset;
		grid-column:3/span 1;
		display:flex;
		justify-content: flex-end;
		align-items: center;
	}
	nav ul{
		display:flex;
	}
	nav li{
		margin-left:3em;
		margin-bottom:0;
	}
	nav a{
		opacity: 1;
		position:relative;
		background: none;
	}
	nav a::before{
		content: '';
		display:block;
		height: 5px;
		background:#c4c4c4;
		position:absolute;
		top:-.75em;
		left:0;
		right:0;
		transform:scale(0,1);
		transition: transform ease-in-out 250ms;
	}
	nav a:hover::before{
		transform: scale(1,1);
	}
}

.login_page {
	text-align: center;
	position: relative;
	top: 100px;
}

/* Styling for the image and header of the about.php page */
.about1 {
	margin: auto;
	width: 50%;
	border: 3px #76cbed;
	padding: 5px;
	text-align: center;
	font-family: 'Work Sans', sans-serif;
}

/* Styling for the wiki div class under the about.php page */
.wiki {
	text-align: center;
	font-family: 'Work Sans', sans-serif;
	padding: 70px 0;
	text-justify: inner-word;
}

/* Centers elements to the middle of page */
.center {
	margin: auto;
	width: 90%;
	padding: 10px;
	text-align: center;
}

#underline {
	text-align: center;
	text-decoration: underline;
}

.thumbnail {
	position: relative;
	left: 1px;
	width: 60%;
}

.box {
	margin: 0 auto;
	position: relative;
	top: 100px;
	width: 70%;
	box-sizing: border-box;
	border: 1px solid #228B22;
}

.more {
	position: relative;
	bottom: 1px;
	background-color: #675B9C;
	color: #fff;
	border: none;
	cursor: pointer;
}

.final {
	margin-bottom: 150px;
}

.brief_text {
	font-weight: normal;
	position: relative;
	top: 50px;
	right: 40px;
}

.row {
  display: flex;
}

.column {
  flex: 33.33%;
  padding: 5px;
}

#final {
	font-weight: bold;
}

ul {
	text-align: center;
	font-family: 'Work sans', sans-serif;
	font-style: italic;
}

#uploadpos {
	margin: auto;
	width: 60%;
	padding: 150px;
}

#scorepos {
	margin: auto;
	width: 60%;
	padding: 100px;
	border: 5px solid #000;
	width:fit-content;
	transform: translate(0, 30%);
}

#branding {
	color: #FFF;
	font-family: 'Work Sans', sans-serif;
	font-style: italic;
	text-decoration: none;
}

#signup_form {
	padding-bottom: 40px;
	list-style: none;
}

#thumb {
	width: 30%;
	position: relative;
	left: 50px;
}

#legs {
	height: 500px;
	margin: 100px 100px;
	float:left; 
	width:25%;
	border-radius: 15%;
}

#about-article {
	float:right;
	margin: 170px 100px;
	width: 40%;
	height:280px;
}

#story {
	text-align: center;
}

